# rx_run3

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  Snakefile  comparison.yaml  conftest.py  environment.yaml  import_packages.sh  job.sh  plot.py  pyproject.toml  pytest.ini  reana.yaml  requirements-ana.txt  requirements-dep.in  requirements-dep.txt  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.py  setup.sh  toys.smk  utilities.cmake
efficiencies/: CMakeLists.txt  LinkDef.h
efficiencies/inc/: CounterHelpers.hpp  EffSlot.hpp  EfficiencyCalculator.hpp  EfficiencyHelpers.hpp  EfficiencyHolder.hpp  EfficiencySvc.hpp  FlatnessHelpers.hpp  IsoHelper.hpp  RXDataPlayer.hpp  VariableBinning.hpp
efficiencies/src/: CounterHelpers.cpp  EffSlot.cpp  EfficiencyCalculator.cpp  EfficiencyHelpers.cpp  EfficiencyHolder.cpp  EfficiencySvc.cpp  FlatnessHelpers.cpp  IsoHelper.cpp  RXDataPlayer.cpp  VariableBinning.cpp
pentaquark/: CMakeLists.txt
pentaquark/inc/: EvtCGCoefSingle.hh  EvtOrthogVector.hh  EvtPatches.hh  RooDalitzAmplitude.h  RooSUMVar.h
pentaquark/src/: EvtCGCoefSingle.cpp  EvtOrthogVector.cpp  RooDalitzAmplitude.cpp  RooSUMVar.cpp
src/dmu/: .gitignore  README.md  __init__.py  pyproject.toml
src/dmu/dataframe/: dataframe.py
src/dmu/fsystem/: fcopy.py
src/dmu/generic/: caching.py  hashing.py  typing_utilities.py  utilities.py  version_management.py
src/dmu/logging/: log_store.py  messages.py
src/dmu/ml/: cv_classifier.py  cv_diagnostics.py  cv_performance.py  cv_predict.py  train_mva.py  utilities.py
src/dmu/pdataframe/: utilities.py
src/dmu/physics/: utilities.py
src/dmu/plotting/: fwhm.py  matrix.py  plotter.py  plotter_1d.py  plotter_2d.py
src/dmu/rdataframe/: atr_mgr.py  utilities.py
src/dmu/rfile/: ddfgetter.py  rfprinter.py
src/dmu/stats/: constraint_adder.py  fit_plotter.py  fit_stats.py  fitter.py  function.py  gof_calculator.py  kde_optimizer.py  measurement.py  minimizers.py  model_factory.py  parameters.py  utilities.py  wdata.py  zfit.py  zfit_models.py  zfit_plotter.py
src/dmu/testing/: rdf_with_friend.py  utilities.py
src/dmu/tests/: conftest.py
src/dmu/text/: transformer.py
src/dmu/workflow/: cache.py
src/dmu/yaml/: resolver.py
src/ecal_calibration/: .gitignore  corrector.py  network.py  preprocessor.py  pyproject.toml  regressor.py  utilities.py
src/ecal_calibration/tests/: test_calo_translator.py  test_corrector.py  test_preprocessor.py  test_regressor.py
src/fitter/: README.md  __init__.py  base_fitter.py  base_model.py  constraint_reader.py  data_fitter.py  data_model.py  data_preprocessor.py  decay_reader.py  fit_config.py  fit_summary.py  inclusive_decays_weights.py  inclusive_sample_weights.py  likelihood_factory.py  misid.py  misid_constraints.py  models.py  parameter_reader.py  pchain.py  pdg_utils.py  prec.py  prec_scales.py  protocols.py  pyproject.toml  sim_fitter.py  sim_model.py  toy_maker.py  toy_plotter.py
src/fitter/tests/: conftest.py  test_category.py  test_category_merger.py  test_cmb_constraints.py  test_config.py  test_constraint_reader.py  test_data_fitter.py  test_data_model.py  test_data_preprocessor.py  test_fit_config.py  test_fit_summary.py  test_inclusive_decays_weights.py  test_inclusive_sample_weights.py  test_likelihood_factory.py  test_misid_constraints.py  test_mva_conf.py  test_parameter_reader.py  test_pars_loader.py  test_pdg_utils.py  test_prec.py  test_prec_scales.py  test_scale_reader.py  test_schema.py  test_signal_constraints.py  test_sim_fitter.py  test_toy_plotter.py  test_toymaker.py
src/root_stubs/: pyproject.toml
src/root_stubs/tests/: test_rdf.py
src/rx_classifier/: apply_classifier.py  mva_calculator.py  pyproject.toml  signal_calculator.py  utilities.py
src/rx_classifier/tests/: conftest.py  test_signal_calculator.py
src/rx_common/: .gitignore  README.md  __init__.py  info.py  pyproject.toml  types.py  utilities.py
src/rx_common/tests/: test_info.py  test_process.py  test_types.py
src/rx_data/: README.md  brem_bias_corrector.py  calo_translator.py  cli.py  electron_bias_corrector.py  filtered_stats.py  ganga_info.py  hop_calculator.py  mass_bias_corrector.py  mass_calculator.py  mis_calculator.py  mva_calculator.py  path_splitter.py  pyproject.toml  rdf_getter.py  rdf_getter12.py  sample_emulator.py  sample_patcher.py  samples.py  spec_maker.py  specification.py  stats.py  swap_calculator.py  swp_calculator.py  testing.py  utilities.py
src/rx_data/doc/: maintenance.md
src/rx_data/tests/: test_brem_bias_corrector.py  test_data_utilities.py  test_electron_bias_corrector.py  test_filtered_stats.py  test_ganga_info.py  test_hop_calculator.py  test_mass_bias_corrector.py  test_mass_calculator.py  test_mis_calculator.py  test_mva_calculator.py  test_ntuple_partitioner.py  test_path_splitter.py  test_rdf_getter.py  test_rdf_getter12.py  test_rdf_loader.py  test_sample_emulator.py  test_sample_patcher.py  test_samples_printer.py  (+4 more)
src/rx_efficiencies/: .gitignore  README.md  acceptance_calculator.py  acceptance_reader.py  decay_names.py  efficiency_calculator.py  efficiency_scanner.py  prec_scales.py  pyproject.toml  scales.py
src/rx_misid/: data_sample_splitter.py  mc_scaler.py  misid_calculator.py  misid_dataset.py  misid_fitter.py  misid_pdf.py  pdf_maker.py  pid_weighter.py  pyproject.toml  sample_splitter.py  sample_weighter.py  splitter.py  weighter.py
src/rx_orchestration/: pyproject.toml
src/rx_pid/: .gitignore  plot_histograms.py  pyproject.toml
src/rx_plots/: .gitlab-ci.yml  README.md  pyproject.toml
src/rx_q2/: .gitignore  README.md  cli.py  config.py  data_set.py  model.py  pyproject.toml  q2smear_calculator.py  q2smear_corrector.py  scale_combiner.py
src/rx_selection/: cache_data.py  cutflow.py  ds_getter.py  efficiency.py  ndict.py  pyproject.toml  selection.py  tests.py  truth_matching.py  utilities.py  version_management.py
src/rx_tests/: README.md  pyproject.toml
src/systematics/: pyproject.toml
src/vector_stubs/: pyproject.toml
(+2472 files in other folders)
