[tool.poetry]
name     = 'rx_run3'
version  = '0.0.1'
packages = [{ include = 'ap_utilities' }]

[tool.uv.workspace]
members   = ['packages/*']

[tool.uv.sources]
ap_utilities = { workspace = true }

[project.optional-dependencies]
dev = [
    'pytest>=7.0',
    'ruff>=0.1',
    'pyright>=1.1',
]

[build-system]
requires      = ['hatchling']
build-backend = 'hatchling.build'

[tool.pytest.ini_options]
testpaths    = ['packages/*/tests', 'tests']
python_files = ['test_*.py']
