[project]
name            = 'rx_run3'
version         = '0.0.1'
requires-python = '>=3.12'

[tool.uv.workspace]
members   = ['packages/*']

[tool.uv.sources]
ap_utilities = { workspace = true }

[project.optional-dependencies]
dev = [
    'pytest>=7.0',
    'ruff>=0.1',
    'pyright>=1.1',
]

[tool.hatch.build.targets.wheel]
packages = [ 'packages/ap_utilities' ]

[build-system]
requires      = ['hatchling']
build-backend = 'hatchling.build'

[tool.pytest.ini_options]
testpaths    = ['packages/*/tests', 'tests']
python_files = ['test_*.py']
