[project]
name            = 'rx_run3'
version         = '0.0.1'
requires-python = '>=3.12'
dependencies = [
    "root>=0.1a8",
]

[tool.uv.workspace]
members   = ['src/*']

[tool.uv.sources]
ap_utilities    = { workspace = true }
ecal_calibration= { workspace = true }
rx_calibration  = { workspace = true }
rx_classifier   = { workspace = true }
rx_common       = { workspace = true }
rx_data         = { workspace = true }
rx_efficiencies = { workspace = true }
rx_misid        = { workspace = true }
rx_pid          = { workspace = true }
rx_plots        = { workspace = true }
rx_q2           = { workspace = true }
rx_selection    = { workspace = true }

[project.optional-dependencies]
dev = [
    'pip',
    'pytest>=7.0',
    'ruff>=0.1',
    'pyright>=1.1',
]

