set(CMAKE_CXX_STANDARD 20) 
set(PROJECT efficiencies)

file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/inc/*.hpp)

message(DEBUG "SRCS = ${SOURCES}")
message(DEBUG "INCS = ${HEADERS}")

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)

ROOT_GENERATE_DICTIONARY(${PROJECT}Dict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/LinkDef.h MODULE ${PROJECT})

add_library(${PROJECT} SHARED ${SOURCES} ${PROJECT}Dict.cxx)

target_link_libraries(${PROJECT} PUBLIC ${PKG_LIBRARIES} kernel)
