[project]
name            = 'dmu'
version         = '0.3.2'
description     = 'Project storing utilities needed to reduce boilerplate code when analyzing data'
readme          = 'README.md'
dependencies = [
    'awkward',
    'awkward-pandas',
    'colorama',
    'jinja2',
    'hist[plot]',
    'matplotlib',
    'mplhep',
    'numpy<=2.2',
    'omegaconf',
    'pandas',
    'PyYAML',
    'scipy',
    'tqdm',
    'toml',
    'uproot',
]

[project.optional-dependencies]
parallel = ['dask[dataframe,distributed]']
ml       = ['scikit-learn', 'joblib', 'optuna']
fit      = ['zfit', 'tensorflow']
dev      = ['pytest', 'pytest-xdist', 'pandas-stubs', 'memory-profiler']

[project.scripts]
check_truth         = 'dmu_scripts.physics.check_truth:main'
print_trees         = 'dmu_scripts.rfile.print_trees:main'
compare_root_files  = 'dmu_scripts.rfile.compare_root_files:main'
compare_classifiers = 'dmu_scripts.ml.compare_classifiers:main'
cmd_from_index      = 'dmu_scripts.testing.cmd_from_index:main'

[tool.setuptools.package-data]
dmu_data = ['*/**.json', '*/**.toml', '*/**.yaml']

