[project]
name            = "ecal_calibration"
version         = '1.7.4'
description     = "Project meant to apply offline corrections to electrons in LHCb"
readme          = "README.md"
requires-python = ">=3.12"
dependencies    = [
    "pandas",
    "bokeh",
    "tqdm",
    "mplhep",
    "scipy",
    "uproot",
    "vector",
    "pyarrow",
    "numpy",
    "dask[distributed]",
]

[project.optional-dependencies]
dev = ["pytest"]
ml  = ["torch"]

[project.scripts]
make_toy_decays = "ecal_calibration_scripts.make_toy_decays:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ecal_calibration"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
