[project]
name = "fitter"
version = "0.0.1"
description = "Framework used to handle fits to data and simulation"
readme = "README.md"
dependencies = [
    "typer",
    "pdg",
    "omegaconf",
    "numpy",
    "seaborn",
    "mplhep",
    "matplotlib",
    "pandas-stubs",
    "python-slugify",
    "zfit",
    "types-tensorflow",
]

# Scripts / CLI entry points
[project.scripts]
rxfitter       = "fitter_scripts.cli:app"
fit_rx_rare    = "fitter_scripts.fit_rx_rare:main"
fit_rx_reso    = "fitter_scripts.fit_rx_reso:main"
fit_grid       = "fitter_scripts.fit_grid:main"
navigate_fits  = "fitter_scripts.navigate_fits:main"
validate_cmb   = "fitter_scripts.validate_cmb:main"
plot_toys      = "fitter_scripts.plot_toys:main"
summarize_toys = "fitter_scripts.summarize_toys:main"

# Optional / development dependencies
[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.package-data]
'fitter_data' = ['**/*.yaml']

