[project]
name            = "root_stubs"
version         = "0.1.0"
description     = "Example project using ROOT.RDF stubs with Pyright"
requires-python = ">=3.12"
dependencies    = []

[project.optional-dependencies]
dev = [
    "pyright>=1.1.312",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
# Enable strict type checking
typeCheckingMode = "strict"

# Treat the 'typings' folder as extra source for types
extraPaths = ["src"]

# ROOT is a C++ module without source, ignore missing source warning
reportMissingModuleSource = "none"

# Optional: enforce all returns match declared type
reportMissingReturn = "error"
