[project]
name            = 'rx_classifier'
version         = '0.0.2'
description     = 'Project used to train classifiers'
readme          = "README.md"
requires-python = '==3.12'
dependencies    = [
    'mplhep',
    'matplotlib',
    'numpy',
    'scikit-learn',
    'joblib',
    'PyYAML',
]

[project.optional-dependencies]
dev  = ['pytest']

[project.scripts]
diagnose_classifier='rx_classifier_scripts.diagnose_classifier:main'
build_job_script   ='rx_classifier_scripts.build_job_script:main'
train_classifier   ='rx_classifier_scripts.train_classifier:main'
apply_classifier   ='rx_classifier_scripts.apply_classifier:main'
compare_classifier ='rx_classifier_scripts.compare_classifier:main'

# Hatch build system
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
rx_classifier     = { workspace = true }
rx_classifier_data= { workspace = true }
