[project]
name            = "rx_data"
description     = "Project with lists of LFNs and utilities needed to download filtered ntuples"
version         = "0.0.0"
readme          = "README.md"
dependencies    = [
    "tqdm",
    "dask",
    "uproot",
    "tabulate", # Or pandas will fail
    "mplhep",
    "particle",
    "vector",
    "pandas",
    'typer',
    "numpy",
]

[project.optional-dependencies]
tst = ["pytest>=0.0.0"]  # When developing
net = ["xrootd>=0.0.0"]  # When doing things that require access to remote files

[project.scripts]
rxdata               = "rx_data.cli:app"
move_sample          = "rx_data_scripts.move_sample:main"
make_friend_trees    = "rx_data_scripts.make_friend_trees:main"
check_missing        = "rx_data_scripts.check_missing:main"
check_corrupted      = "rx_data_scripts.check_corrupted:main"
branch_calculator    = "rx_data_scripts.branch_calculator:main"
copy_samples         = "rx_data_scripts.copy_samples:main"
merge_samples        = "rx_data_scripts.merge_samples:main"
dump_metadata        = "rx_data_scripts.dump_metadata:main"
download_rx_data     = "rx_data_scripts.download_rx_data:main"
check_local_stats    = "rx_data_scripts.check_local_stats:main"
check_filtered_stats = "rx_data_scripts.check_filtered_stats:main"
list_triggers        = "rx_data_scripts.list_triggers:main"
list_lfns            = "rx_data_scripts.list_lfns:main"

[tool.setuptools.package-data]
rx_data_data = ['**/*.json', '**/*.yaml']
rx_data_lfns = ['**/*.json']
