[project]
name        = 'rx_misid'
description = 'Project used to calculate fully hadronic misid shapes'
version     = '0.0.1'
readme      = 'README.md'
requires-python = '>=3.12'
dependencies= [
'PyYAML',
'mplhep',
'pyarrow',
'boost-histogram',
]

[project.optional-dependencies]
dev  = ['pytest']

[project.scripts]
plot_samples='rx_misid_scripts.plot_samples:main'

[tools.setuptools.packages.find]
where   = ['src']

[tool.setuptools.package-data]
'rx_misid_data' = ['*.yaml']
