
[project]
name            = "rx_orchestration"
version         = "0.0.1"
description     = "An orchestration project"
readme          = "README.md"
license         = { text = "MIT" }
authors         = [
  { name = "angel.campoverde@cern.ch" }
]

dependencies = [
  "law",
]

[project.scripts]
# ----------------
# Plotting
# ----------------
cutflow_law = "workflows.plots.cutflow_law:main"
compare_law = "workflows.plots.compare_law:main"
overlay_law = "workflows.plots.overlay_law:main"
plot_2d_law = "workflows.plots.plot_2d_law:main"
checks_law  = "workflows.plots.checks_law:main"
friend_trees= "workflows.data.friend_trees:main"

# ----------------
# Classifier
# ----------------
train_law = "workflows.classification.train_law:main"

# ----------------
# Mass scales and resolutions
# ----------------
scales_law = "workflows.q2.scales_law:main"

# ----------------
# Fits
# ----------------
reso_fits_law = "workflows.fits.reso_fits_law:main"
rare_fits_law = "workflows.fits.rare_fits_law:main"
# ----------------
rxorc = 'cli:app'
