[project]
name            = "rx_selection"
version         = "0.1.9"
description     = "Project used to apply selection to ntuples used for RX measurements filtered and skimmed by post_ap project"
readme          = "README.md"
dependencies    = [
    "numexpr",
    "jacobi",
    "joblib",
    "pandas",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

# Scripts / CLI entry points
[project.scripts]
apply_selection = "rx_selection_scripts.apply_selection:main"
make_jobs_list  = "rx_selection_scripts.make_jobs_list:main"
validate_sample = "rx_selection_scripts.validate_sample:main"
jmanager_ihep   = "rx_selection_scripts.jmanager_ihep:main"

[tool.setuptools.package-data]
'rx_selection_data' = ['**/*.yaml']

