[project]
name            = "vector-stubs"
version         = "0.0.1"
description     = "Type stubs for the scikit-hep/vector package"
readme          = "README.md"
license         = {text = "MIT"}
requires-python = ">=3.10"
dependencies    = []

[tool.hatch.build.targets.wheel]
packages = ["vector"]

[tool.hatch.build.targets.sdist]
include = [
    "/vector",
    "/README.md",
]
