[project]
name            = "vector-stubs"
version         = "0.0.1"
description     = "Type stubs for the scikit-hep/vector package"
readme          = "README.md"
license         = {text = "MIT"}
dependencies    = []

[tool.hatch.build.targets.wheel]
packages = ["vector"]

[tool.hatch.build.targets.sdist]
include = [
    "/vector",
    "/README.md",
]
